--- a/settingswindow.ui
+++ b/settingswindow.ui
@@ -89,10 +89,10 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="2">
-       <widget class="QLabel" name="label_3">
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
         <property name="text">
-         <string>ms</string>
+         <string>Sender</string>
         </property>
        </widget>
       </item>
@@ -103,14 +103,14 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label">
+      <item row="1" column="2">
+       <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Sender</string>
+         <string>ms</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
+      <item row="6" column="0">
        <widget class="QCheckBox" name="checksumbox">
         <property name="enabled">
          <bool>false</bool>
@@ -139,6 +139,13 @@
         </property>
         <property name="margin">
          <number>1</number>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0" colspan="3">
+       <widget class="QCheckBox" name="sdbox">
+        <property name="text">
+         <string>Check SD printing status</string>
         </property>
        </widget>
       </item>
