Added firmware to options (EEPROM editor) Some preparations to support EEPROM editor Only enable checksums and EEPROM editor for debug right now

--- a/graphics.qrc
+++ b/graphics.qrc
@@ -9,5 +9,6 @@
         <file>icons/settings.png</file>
         <file>icons/about.png</file>
         <file>icons/exit.png</file>
+        <file>icons/eeprom.png</file>
     </qresource>
 </RCC>
