--- a/eepromwindow.ui
+++ b/eepromwindow.ui
@@ -22,6 +22,9 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="locale">
+      <locale language="English" country="UnitedStates"/>
+     </property>
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
