--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1096,8 +1096,6 @@ STOP</string>
      <string>File</string>
     </property>
     <addaction name="actionOpen"/>
-    <addaction name="actionRecent"/>
-    <addaction name="separator"/>
     <addaction name="actionSettings"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
@@ -1170,6 +1168,9 @@ STOP</string>
    <addaction name="actionSettings"/>
   </widget>
   <action name="actionOpen">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="graphics.qrc">
      <normaloff>:/icons/g.png</normaloff>:/icons/g.png</iconset>
@@ -1179,14 +1180,6 @@ STOP</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
-   </property>
-  </action>
-  <action name="actionRecent">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-   <property name="text">
-    <string>Recent</string>
    </property>
   </action>
   <action name="actionExit">
