--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -376,19 +376,6 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="0" colspan="2">
-        <widget class="QLabel" name="label_2">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>15</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Step</string>
-         </property>
-        </widget>
-       </item>
        <item row="5" column="0" colspan="3">
         <widget class="QDoubleSpinBox" name="stepspin">
          <property name="locale">
@@ -865,6 +852,19 @@ STOP</string>
          </property>
          <property name="flat">
           <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0" colspan="3">
+        <widget class="QLabel" name="label_2">
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>15</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Step Increment</string>
          </property>
         </widget>
        </item>
