--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -43,13 +43,6 @@
        <string>Serial</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0">
-        <widget class="QPushButton" name="portsBtn">
-         <property name="text">
-          <string>Ports</string>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="1">
         <widget class="QComboBox" name="serialBox">
          <property name="maximumSize">
@@ -60,15 +53,22 @@
          </property>
         </widget>
        </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="baudbox"/>
+       </item>
+       <item row="0" column="0">
+        <widget class="QPushButton" name="portsBtn">
+         <property name="text">
+          <string>Ports</string>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="0">
         <widget class="QPushButton" name="connectBtn">
          <property name="text">
           <string>Connect</string>
          </property>
         </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QComboBox" name="baudbox"/>
        </item>
       </layout>
      </widget>
@@ -254,6 +254,9 @@
          <property name="text">
           <string>100</string>
          </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
          <property name="clearButtonEnabled">
           <bool>false</bool>
          </property>
@@ -284,8 +287,16 @@
        </item>
        <item row="9" column="2">
         <widget class="QLineEdit" name="flowedit">
+         <property name="font">
+          <font>
+           <pointsize>13</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>100</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
          <property name="clearButtonEnabled">
           <bool>false</bool>
