--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -416,7 +416,7 @@
        <item row="7" column="0" colspan="2">
         <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>B tmp</string>
+          <string>Bed tmp</string>
          </property>
         </widget>
        </item>
@@ -903,6 +903,13 @@ STOP</string>
        <string>Console</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
+       <item row="3" column="0">
+        <widget class="QPushButton" name="sendbtn">
+         <property name="text">
+          <string>Send</string>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QTextBrowser" name="terminal">
          <property name="acceptDrops">
@@ -922,13 +929,6 @@ STOP</string>
        </item>
        <item row="2" column="0">
         <widget class="QLineEdit" name="sendtext"/>
-       </item>
-       <item row="3" column="0">
-        <widget class="QPushButton" name="sendbtn">
-         <property name="text">
-          <string>Send</string>
-         </property>
-        </widget>
        </item>
       </layout>
      </widget>
