--- a/settingswindow.ui
+++ b/settingswindow.ui
@@ -219,7 +219,11 @@
        </widget>
       </item>
       <item row="2" column="1" colspan="2">
-       <widget class="QSpinBox" name="feedrateBox"/>
+       <widget class="QSpinBox" name="feedrateBox">
+        <property name="maximum">
+         <number>99999</number>
+        </property>
+       </widget>
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="label_10">
@@ -233,7 +237,11 @@ feedrate</string>
        </widget>
       </item>
       <item row="3" column="1" colspan="2">
-       <widget class="QSpinBox" name="extruderFeedrateBox"/>
+       <widget class="QSpinBox" name="extruderFeedrateBox">
+        <property name="maximum">
+         <number>99999</number>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
