--- a/settingswindow.ui
+++ b/settingswindow.ui
@@ -99,7 +99,7 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="0" colspan="3">
+      <item row="5" column="0" colspan="3">
        <widget class="QCheckBox" name="lockbox">
         <property name="text">
          <string>Lock controls when printing</string>
@@ -113,14 +113,14 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0" colspan="3">
+      <item row="6" column="0" colspan="3">
        <widget class="QCheckBox" name="sdbox">
         <property name="text">
          <string>Check SD printing status</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
+      <item row="7" column="0">
        <widget class="QCheckBox" name="checksumbox">
         <property name="enabled">
          <bool>true</bool>
@@ -149,6 +149,13 @@
         </property>
         <property name="margin">
          <number>1</number>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QCheckBox" name="dtrbox">
+        <property name="text">
+         <string>DTR</string>
         </property>
        </widget>
       </item>
