--- a/settingswindow.ui
+++ b/settingswindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>478</width>
-    <height>285</height>
+    <width>483</width>
+    <height>341</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,7 +24,7 @@
       <string>Internal</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="3" column="0" colspan="3">
+      <item row="4" column="0" colspan="3">
        <widget class="QCheckBox" name="echobox">
         <property name="enabled">
          <bool>false</bool>
@@ -99,7 +99,7 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0" colspan="3">
+      <item row="6" column="0" colspan="3">
        <widget class="QCheckBox" name="lockbox">
         <property name="text">
          <string>Lock controls when printing</string>
@@ -113,14 +113,14 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0" colspan="3">
+      <item row="7" column="0" colspan="3">
        <widget class="QCheckBox" name="sdbox">
         <property name="text">
          <string>Check SD printing status</string>
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
+      <item row="8" column="0">
        <widget class="QCheckBox" name="checksumbox">
         <property name="enabled">
          <bool>true</bool>
@@ -152,12 +152,22 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="0">
+      <item row="5" column="0">
        <widget class="QCheckBox" name="dtrbox">
         <property name="text">
          <string>DTR</string>
         </property>
        </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_11">
+        <property name="text">
+         <string>Flow control</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1" colspan="2">
+       <widget class="QComboBox" name="flowcontrolbox"/>
       </item>
      </layout>
     </widget>
