Editable baudrate Minor UI fixes

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -51,10 +51,17 @@
            <height>16777215</height>
           </size>
          </property>
+         <property name="editable">
+          <bool>false</bool>
+         </property>
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QComboBox" name="baudbox"/>
+        <widget class="QComboBox" name="baudbox">
+         <property name="editable">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
        <item row="0" column="0">
         <widget class="QPushButton" name="portsBtn">
