--- a/settingswindow.ui
+++ b/settingswindow.ui
@@ -263,7 +263,7 @@ feedrate</string>
      </layout>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="2" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
