Added tray icon

--- a/settingswindow.ui
+++ b/settingswindow.ui
@@ -24,16 +24,38 @@
       <string>Internal</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="4" column="0" colspan="3">
-       <widget class="QCheckBox" name="echobox">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="toolTip">
-         <string>Show every sent command in console</string>
-        </property>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
         <property name="text">
-         <string>Echo commands</string>
+         <string>Sender</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1" colspan="2">
+       <widget class="QComboBox" name="flowcontrolbox">
+        <property name="toolTip">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_11">
+        <property name="text">
+         <string>Flow control</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QCheckBox" name="dtrbox">
+        <property name="text">
+         <string>DTR</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>ms</string>
         </property>
        </widget>
       </item>
@@ -62,20 +84,6 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>ms</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>Status</string>
-        </property>
-       </widget>
-      </item>
       <item row="2" column="1">
        <widget class="QSpinBox" name="statusbox">
         <property name="toolTip">
@@ -99,28 +107,7 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0" colspan="3">
-       <widget class="QCheckBox" name="lockbox">
-        <property name="text">
-         <string>Lock controls when printing</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Sender</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="0" colspan="3">
-       <widget class="QCheckBox" name="sdbox">
-        <property name="text">
-         <string>Check SD printing status</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="0">
+      <item row="9" column="0">
        <widget class="QCheckBox" name="checksumbox">
         <property name="enabled">
          <bool>true</bool>
@@ -152,24 +139,37 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
-       <widget class="QCheckBox" name="dtrbox">
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>DTR</string>
+         <string>Status</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_11">
+      <item row="8" column="0" colspan="3">
+       <widget class="QCheckBox" name="sdbox">
         <property name="text">
-         <string>Flow control</string>
+         <string>Check SD printing status</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1" colspan="2">
-       <widget class="QComboBox" name="flowcontrolbox">
+      <item row="7" column="0" colspan="3">
+       <widget class="QCheckBox" name="lockbox">
+        <property name="text">
+         <string>Lock controls when printing</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
+       <widget class="QCheckBox" name="traybox">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
         <property name="toolTip">
-         <string/>
+         <string>Show tray icon</string>
+        </property>
+        <property name="text">
+         <string>Tray icon</string>
         </property>
        </widget>
       </item>
