--- a/sdwindow.ui
+++ b/sdwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>249</width>
-    <height>246</height>
+    <width>274</width>
+    <height>302</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Print from SD</string>
@@ -21,7 +27,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Print file:</string>
+      <string>Select file:</string>
      </property>
     </widget>
    </item>
@@ -40,8 +46,14 @@
    </item>
    <item row="1" column="0">
     <widget class="QListWidget" name="fileslist">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="autoScroll">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
     </widget>
    </item>
